# fabro

./: AGENTS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  docker-compose.local.yaml  docker-compose.split-web.yaml  docker-compose.yaml
.github/workflows/: nightly.yml  release.yml
docker/split-web/: README.md
docs/: docs.json
docs/agents/: acp.mdx  outputs.mdx  subagents.mdx  tools.mdx
docs/api-reference/: fabro-api.yaml
docs/brainstorms/: 2026-03-20-acp-agent-configuration-brainstorm.md  2026-04-16-fabro-upgrade-prerelease-requirements.md
docs/core-concepts/: agents.mdx
docs/execution/: run-configuration.mdx
docs/internal/: fabro-event-schema-v2-concrete-shape.md  migrations-strategy.md  server-secrets-strategy.md
docs/plans/: 2026-03-20-feat-add-implement-opencode-workflow-plan.md  2026-03-20-refactor-acp-agent-configuration-plan.md  2026-04-06-settings-command-server-local-merge-plan.md  2026-04-07-run-manifest-blobs-and-bundle-removal-plan.md  2026-04-07-run-state-projection-consolidation-plan.md  2026-04-08-cli-services-command-context-refactor-plan.md  2026-04-08-production-web-ui.md  2026-04-15-canonical-blocked-run-status-plan.md  2026-04-22-002-feat-web-install-object-store-step-plan.md  2026-04-22-003-refactor-lock-down-server-secrets-plan.md  2026-04-24-001-refactor-adopt-uv-patterns-plan.md  2026-04-25-001-refactor-docker-sandbox-clone-based-plan.md  (+8 more)
installer/: fabro-nightly.rb.template  fabro.rb.template
lib/crates/fabro-template/: Cargo.toml
lib/crates/fabro-template/src/: dependency.rs  lib.rs  store.rs
(+924 files in other folders)
