[package]
name = "fabro-template"
edition.workspace = true
version.workspace = true
publish = false
license.workspace = true
description = "Shared MiniJinja-based template rendering for Fabro"

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
fabro-util = { path = "../fabro-util" }
fabro-types = { path = "../fabro-types" }
miette.workspace = true
minijinja = { workspace = true, features = ["debug", "unstable_machinery"] }
serde.workspace = true
thiserror.workspace = true
toml.workspace = true
